--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -261,4 +261,5 @@
     <string name="drop_down_list_footer_default_text">更多</string>
     <string name="drop_down_list_footer_loading_text">加载中…</string>
     <string name="drop_down_list_footer_no_more_text">没有更多了</string>
+    <string name="update_at">更新于:&#160;</string>
 </resources>
